specs/blueprints/errors/parsing/missing_field_for_item.eno
# Parsing an item without any previous element

-- input
- item
-- input

## ParseError

-- text
Line 1 contains an item without a field being specified before.
-- text

-- snippet
   Line | Content
 >    1 | - item
-- snippet

selection: [0,0] => [0,6]


# Parsing an item preceded by a line continuation

-- input
field:
| continuation
- item
-- input

## ParseError

-- text
Line 3 contains an item without a field being specified before.
-- text

-- snippet
   Line | Content
      1 | field:
      2 | | continuation
 >    3 | - item
-- snippet

selection: [2,0] => [2,6]


# Parsing an item preceded by an attribute

-- input
field:
attribute = value
- item
-- input

## ParseError

-- text
Line 3 contains an item without a field being specified before.
-- text

-- snippet
   Line | Content
      1 | field:
      2 | attribute = value
 >    3 | - item
-- snippet

selection: [2,0] => [2,6]